--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ I have worked on and also a few that I am currently working on. Feel free to che
         
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <a href="https://PhilipKatema.github.io/Portfolio/post/amazon_price_scrapper/" class="db grow">
-            <img src="https://PhilipKatema.github.io/Portfolio/images/amazon.jpg" class="img" alt="image from Amazon Price Tracker">
+            <img src="https://PhilipKatema.github.io/Portfolio/images/HMS.jpg" class="img" alt="image from Health Management System">
           </a>
         </div>
       
