--- a/about/index.html
+++ b/about/index.html
@@ -164,10 +164,12 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure>
+    <section class="cf ph5 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
+      <figure>
     <img src="https://PhilipKatema.github.io/Portfolio/images/Profile.jpg"/> 
 </figure>
-
+</section>
+<section class="cf ph5 ph5-l pv3 pv4-l f4 tc-l center measure-max lh-copy mid-gray"></section>
 <p>Data analytics and Artificial Intelligence are my passion. My name is Philip Katema and I have been working in the field of data analytics for over 7 years. I have worked as a data analyst for NGO's in Malawi and also worked as an Advanced AI Data Trainer, where I had the opportunity to work with people from around the world to train AI models. I started my career in 2014 as a Data Entry Clerk with an NGO, Baobab Health Trust based in Blantyre, Malawi on Data System Transitioning Project. I was part of a team that was responsible for the first-ever transition of medical data in Government health facilities from paper-based records to an Electronic Management System. I eventually rose to the position of Data Supervisor, where I was responsible for training and managing a team of 10 -20 data clerks on the same project. Then in 2017, I joined an International NGO, Medecins Sans Frontieres (Doctors Without Borders), based in Blantyre, Malawi where I was employed as a Data Analyst responsible for managing all the data processes on a Key Population Project focused on HIV and TB management until phasing out of the project in 2020. In 2021 I joined another Project with the same organization where I worked as a Data Analyst managing data for Cervical Cancer Patients until June 2022. In July 2022, I was promoted to the position of Data Analyst Manager in another project focused on a cohort of over 20,000 Advanced HIV/TB patients. I managed a team of 5 Data Analysts and 8 Data Entry Clerks until the Project phased out in August 2023. I then joined Invisible Technologies in May 2024 as an Advanced AI Data Trainer on an independent contract. As an Advanced AI Data Trainer at Invisible, I was responsible for supervising and training client AI models for top Tech companies worldwide. I collaborated with a diverse team from around the world to optimize AI algorithms, implementing innovative techniques to enhance model performance and accuracy. I hold an undergraduate Bachelor's degree in Computer Science and I am currently studying for my Data Analytics in Business Masters Degree at Seattle Pacific University in Seattle, Washington. I will graduate in June, 2027.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
