--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ I have worked on and also a few that I am currently working on. Feel free to che
         
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <a href="https://PhilipKatema.github.io/Portfolio/post/yahoo_fin_web_scrapper/" class="db grow">
-            <img src="https://PhilipKatema.github.io/Portfolio/images/Yahoo_Fin.jpg" class="img" alt="image from Yahoo Finance Web Scrapper">
+            <img src="https://PhilipKatema.github.io/Portfolio/images/MDP.png" class="img" alt="image from Yahoo Finance Web Scrapper">
           </a>
         </div>
       
