--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ I have worked on and also a few that I am currently working on. Feel free to che
         
         
           <h2 class="f5 fw4 mb4 dib mr3">
-            <a href="https://PhilipKatema.github.io/Portfolio/post/movie_recommendation/" class="link black dim">
+            <a href="https://PhilipKatema.github.io/Portfolio/post/" class="link black dim">
               Movie Recommendation Systems
             </a>
           </h2>
